examples/test/testpolicy17839.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17839
  namespace: namespace287
spec:
  podSelector:
    matchLabels:
      key44: value22
      key2: value11
      key20: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value44
      podSelector:
        matchLabels:
          key14: value11
          key16: value44
